--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
-    "react-intersection-observer": "^9.15.1",
+    "react-intersection-observer": "^9.16.0",
     "react-resizable-panels": "^2.0.19",
     "react-router": "^6.23.1",
     "react-router-dom": "^6.23.1",
@@ -66,13 +66,13 @@
     "@types/node": "^20.14.2",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
-    "@vitejs/plugin-react-swc": "3.5.0",
+    "@vitejs/plugin-react-swc": "^3.9.0",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "sass": "^1.85.0",
     "tailwindcss": "3.4.1",
     "tempo-devtools": "^2.0.102",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0"
+    "vite": "^6.3.5"
   }
 }
