--- a/package.json
+++ b/package.json
@@ -47,11 +47,13 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.1.5",
     "framer-motion": "^11.18.2",
+    "icons": "^1.0.0",
     "lucide-react": "^0.394.0",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
+    "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-resizable-panels": "^2.0.19",
     "react-router": "^6.23.1",
